# Zappy---AI-Serveur-GUI

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.sh
.github/workflows/: ci.yaml
bonus/ai/src/zappy_ai_rl/: __main__.py  cli.py  logging_setup.py
bonus/ai/src/zappy_ai_rl/config/: roles_config.py
bonus/ai/src/zappy_ai_rl/coordination/: broadcast_codec.py  team_knowledge.py
bonus/ai/src/zappy_ai_rl/decision/: actions.py  behaviour_tree.py  bot_state.py  navigation.py  rl_policy.py  rl_weights.json  role_selector.py
bonus/ai/src/zappy_ai_rl/decision/roles/: collector.py  forker.py  leader.py  survivor.py
bonus/ai/src/zappy_ai_rl/network/: command_queue.py  connection.py
bonus/ai/src/zappy_ai_rl/protocol/: constants.py  messages.py  parser.py
bonus/ai/src/zappy_ai_rl/world/: inventory.py  mental_map.py  vision.py
bonus/training/: eval_rl.py  train_rl.py
gui/: CMakeLists.txt
gui/assets/objects/: slime.gltf  slime_level1.gltf  slime_level2.gltf  slime_level3.gltf  slime_level4.gltf  slime_level5.gltf  slime_level6.gltf  slime_level7.gltf  slime_level8.gltf  zombie2.gltf
gui/assets/objects/resources/: deraumere.gltf  food.gltf  linemate.gltf  mendiane.gltf  phiras.gltf  sibur.gltf  thystame.gltf
gui/assets/shaders/: world_lighting.fs  world_lighting.vs
gui/src/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/cli/: CMakeLists.txt
libs/cli/include/cli/: CLIManager.hpp  CLIOption.hpp  CLIOptionConfig.hpp
libs/cli/src/: CLIManager.cpp  CMakeLists.txt
libs/game/: CMakeLists.txt
libs/game/include/game/: GameException.hpp  Resources.hpp  Trantorian.hpp  World.hpp
libs/game/src/: CMakeLists.txt  Trantorian.cpp  World.cpp
libs/gui_client/: CMakeLists.txt
libs/gui_client/include/gui_client/: ClientRunner.hpp  GUIClient.hpp  GUIConfig.hpp
libs/gui_client/include/gui_client/rendering/: WorldRenderer.hpp
libs/gui_client/src/: CMakeLists.txt  ClientRunner.cpp  GUIClient.cpp  WorldRenderer.cpp  WorldRendererAssets.cpp  WorldRendererCamera.cpp  WorldRendererInteraction.cpp  WorldRendererInternals.hpp  WorldRendererLogs.cpp  WorldRendererPlayers.cpp  WorldRendererWorld.cpp
libs/gui_protocol/: CMakeLists.txt
libs/gui_protocol/include/gui_protocol/: GUIProtocolHandler.hpp  GameState.hpp
libs/gui_protocol/src/: CMakeLists.txt  GUIProtocolHandler.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: Color.hpp  Level.hpp  Logger.hpp
libs/logger/src/: CMakeLists.txt  Color.cpp  Level.cpp  Logger.cpp
libs/network_server/: CMakeLists.txt
libs/network_server/include/network_server/: Client.hpp  Server.hpp
libs/network_server/src/: CMakeLists.txt  Client.cpp  Server.cpp
libs/protocol/: CMakeLists.txt
libs/protocol/include/protocol/: Protocol.hpp  ProtocolCommandHandler.hpp
libs/protocol/src/: CMakeLists.txt  Protocol.cpp  ProtocolCommandHandler.cpp  ProtocolCommands.cpp
server/: CMakeLists.txt
server/include/: ZappyServerCore.hpp
server/src/: CMakeLists.txt  ZappyServerCore.cpp  main.cpp
